--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,12 +4,14 @@
     // color: rgb(53, 53, 53);
     // box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: space-around;
+    // justify-content: space-around;
     align-items: center;
     
     h1 {
         font-size: 20px;
         text-transform: uppercase;
+        margin-right: auto;
+        padding-left: 25px;
         &:hover {
             cursor: pointer;
             color: #457a9d;
