--- a/src/components/CountryInfo/CountryInfo.module.scss
+++ b/src/components/CountryInfo/CountryInfo.module.scss
@@ -1,55 +1,78 @@
-.main {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 100px;
-  margin-top: 100px;
+.countryInfoBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 100px;
 
-  img {
-      width: 440px;
-      // height: 300px;
-    //   object-fit: none;
-      box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
-  }
+    .main {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 100px;
+        margin-top: 50px;
 
-  .data {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+        img {
+            width: 440px;
+            box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+        }
 
-      a {
-        text-align: center;
-        cursor: pointer;
-        font-size: 14px;
-        font-weight: 300;
-        box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
-        text-decoration: none;
-        padding: 2px 15px;
-        margin: 0 5px;
-      }
+        .data {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
-      .info {
-          margin-top: 20px;
+            a {
+                text-align: center;
+                cursor: pointer;
+                font-size: 14px;
+                font-weight: 300;
+                box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+                text-decoration: none;
+                padding: 2px 15px;
+                margin: 0 5px;
+            }
 
-          p {
-              margin: 10px 0px;
-              span {
-                  font-weight: bold;
-              }
-          }
-      }
-      .border {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          grid-gap: 5px;
-          width: 100%;
-      }
+            .info {
+                margin-top: 20px;
 
-      .borders{
-          p {
-              font-weight: bold;
-              margin: 10px 0;
-          }
-      }
-  }
+                p {
+                    margin: 10px 0px;
+
+                    span {
+                        font-weight: bold;
+                    }
+                }
+            }
+
+            .border {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                grid-gap: 5px;
+                width: 100%;
+            }
+
+            .borders {
+                p {
+                    font-weight: bold;
+                    margin: 10px 0;
+                }
+            }
+        }
+    }
+}
+
+.button {
+    text-align: center;
+    width: 66px;
+    margin-right: auto;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 300;
+    box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+    padding: 8px 15px;
+
+    &:hover {
+        box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.3);
+
+    }
 }
