--- a/src/components/MapSwitcher/MapSwitcher.module.scss
+++ b/src/components/MapSwitcher/MapSwitcher.module.scss
@@ -1,34 +1,44 @@
 .main {
-  margin: 35px 0 10px;
+  margin: 25px 0 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-button{
-  height: 40px;
-  width: 250px;
-  background-color: #D6D6DA;
-  font-size: 16px;
+.span {
+  font-size: 18px;
   font-weight: 500;
-  border: none;
-  margin: -5px; 
-  padding: 0;
-  outline: none;
+  margin: 2px 10px;
+  padding: 6px 15px;
+
   &:hover {
-    background: #457a9d;
-    color: #FFF;
+    cursor: pointer;
+    border-bottom: 2px solid #457a9d;
   }
 }
 
-.multiButton :first-child {
-  border-radius: 20px 0 0 20px;
-}
-.multiButton :last-child {
-  border-radius: 0 20px 20px 0;
+.active {
+  padding: 6px 15px;
+  margin: 2px 10px;
+  font-size: 18px;
+  font-weight: 500;
+  border-bottom: 2px solid #457a9d;
+
+  &:hover {
+    cursor: pointer;
+    border-bottom: 2px solid #457a9d;
+  }
 }
 
-.active {
-  background-color: #457a9d;
-  color: #FFF;
-  transition: all ease 0.2s;
+.button {
+  text-align: center;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 300;
+  box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+  padding: 8px 15px;
+
+  &:hover {
+    box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.3);
+
+  }
 }
