--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,25 +1,32 @@
 .main {
     height: 50px;
-    // background-color: #e5e2e2;
-    // color: rgb(53, 53, 53);
-    // box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
     display: flex;
-    // justify-content: space-around;
     align-items: center;
-    
+    margin: 0 40px;
+
+    .arrow {
+        margin: 0 5px;
+
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.2);
+        }
+    }
+
     h1 {
         font-size: 20px;
         text-transform: uppercase;
         margin-right: auto;
-        padding-left: 25px;
+        padding-left: 5px;
+
         &:hover {
             cursor: pointer;
             color: #457a9d;
-}
+        }
     }
-   
+
     @media(max-width: 1024px) {
-        &{
+        & {
             padding: 0px 20px;
 
             .main {
@@ -29,12 +36,14 @@
     }
 
     @media(max-width: 767px) {
-        
+
         .main {
             height: 100%;
+
             h1 {
                 font-size: 17px;
             }
+
             p {
                 font-size: 14px
             }
