--- a/src/components/MapSwitcher/MapSwitcher.module.scss
+++ b/src/components/MapSwitcher/MapSwitcher.module.scss
@@ -34,11 +34,11 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: 300;
-  box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
-  padding: 8px 15px;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
+  padding: 6px 15px;
 
   &:hover {
-    box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.3);
 
   }
 }
