--- a/src/components/CountryInfo/CountryInfo.module.scss
+++ b/src/components/CountryInfo/CountryInfo.module.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     gap: 100px;
     margin-top: 50px;
+    padding: 15px 20px;
 
     img {
         width: 440px;
@@ -38,36 +39,196 @@
             }
         }
 
-        .border {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 5px;
-            width: 100%;
-        }
-
         .borders {
             p {
                 font-weight: bold;
                 margin: 10px 0;
             }
         }
+
+        .border {
+            display: grid;
+            grid-template-columns: repeat(4, 100px);
+            gap: 8px 8px;
+        }
+
     }
 }
 
-// }
+@media(min-width: 1024px) and (max-width: 1200px) {
+    .main {
+        gap: 50px;
+        margin-top: 35px;
+        padding: 30px 30px;
 
-.button {
-    text-align: center;
-    width: 66px;
-    // margin-right: auto;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 300;
-    box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
-    padding: 8px 15px;
+        img {
+            width: 380px;
+        }
 
-    &:hover {
-        box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.3);
+        .data {
+            h1 {
+                font-size: 26px;
+            }
 
+            .info {
+                margin-top: 15px;
+
+                p {
+                    margin: 8px 0px;
+                    font-size: 14px;
+                }
+            }
+
+            .borders {
+                p {
+                    margin: 6px 0;
+                }
+            }
+
+            .border {
+                gap: 7px 5px;
+            }
+
+        }
+    }
+}
+
+@media(min-width: 768px) and (max-width: 1024px) {
+    .main {
+        gap: 40px;
+        padding: 30px 30px;
+
+        img {
+            width: 380px;
+        }
+
+        .data {
+            h1 {
+                font-size: 26px;
+            }
+
+            .info {
+                margin-top: 15px;
+
+                p {
+                    margin: 8px 0px;
+                    font-size: 14px;
+                }
+            }
+
+            .borders {
+                p {
+                    margin: 6px 0;
+                }
+            }
+
+            .border {
+                grid-template-columns: repeat(3, 100px);
+                gap: 5px 3px;
+            }
+
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+        margin-top: 10px;
+        padding: 15px 20px;
+
+        img {
+            width: 220px;
+        }
+
+        .data {
+            a {
+                font-size: 12px;
+                font-weight: 300;
+                padding: 2px 15px;
+                margin: 0 5px;
+            }
+
+            h1 {
+                font-size: 22px;
+            }
+
+            .info {
+                margin-top: 12px;
+
+                p {
+                    margin: 6px 0px;
+                    font-size: 14px;
+                }
+            }
+
+            .borders {
+                p {
+                    font-size: 14px;
+                    margin: 6px 0;
+                }
+            }
+
+            .border {
+                grid-template-columns: repeat(3, 1fr);
+                grid-gap: 7px 5px;
+            }
+
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+        margin-top: 10px;
+        padding: 15px 20px;
+
+        img {
+            width: 220px;
+        }
+
+        .data {
+            a {
+                font-size: 12px;
+                font-weight: 300;
+                padding: 2px 15px;
+                margin: 0 5px;
+            }
+
+            h1 {
+                font-size: 22px;
+            }
+
+            .info {
+                margin-top: 12px;
+
+                p {
+                    margin: 6px 0px;
+                    font-size: 14px;
+                }
+            }
+
+            .borders {
+                p {
+                    font-size: 14px;
+                    margin: 6px 0;
+                }
+            }
+
+            .border {
+                grid-template-columns: repeat(3, 1fr);
+                grid-gap: 7px 5px;
+            }
+
+        }
     }
 }
