--- a/src/components/MapSwitcher/MapSwitcher.module.scss
+++ b/src/components/MapSwitcher/MapSwitcher.module.scss
@@ -2,43 +2,118 @@
   margin: 25px 0 10px;
   display: flex;
   justify-content: space-between;
-}
+  align-items: center;
 
-.span {
-  font-size: 18px;
-  font-weight: 500;
-  margin: 2px 10px;
-  padding: 6px 15px;
+  .switch {
+    display: flex;
+  }
 
-  &:hover {
-    cursor: pointer;
+  .span {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 2px 10px;
+    padding: 6px 15px;
+
+    &:hover {
+      cursor: pointer;
+      border-bottom: 2px solid #457a9d;
+    }
+  }
+
+  .active {
+    padding: 6px 15px;
+    margin: 2px 10px;
+    font-size: 18px;
+    font-weight: 500;
     border-bottom: 2px solid #457a9d;
+
+    &:hover {
+      cursor: pointer;
+      border-bottom: 2px solid #457a9d;
+    }
   }
 }
 
-.active {
-  padding: 6px 15px;
-  margin: 2px 10px;
-  font-size: 18px;
-  font-weight: 500;
-  border-bottom: 2px solid #457a9d;
+@media(min-width: 1024px) and (max-width: 1100px) {
+  .main {
+    margin: 20px 0 8px;
 
-  &:hover {
-    cursor: pointer;
-    border-bottom: 2px solid #457a9d;
+    .span {
+      font-size: 17px;
+      font-weight: 500;
+      margin: 2px 6px;
+      padding: 6px 12px;
+    }
+
+    .active {
+      margin: 2px 6px;
+      font-size: 17px;
+      font-weight: 500;
+      padding: 6px 12px;
+    }
   }
 }
 
-.button {
-  text-align: center;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 300;
-  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
-  padding: 6px 15px;
+@media(min-width: 768px) and (max-width: 1024px) {
+  .main {
+    margin: 20px 0 8px;
 
-  &:hover {
-    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.3);
+    .span {
+      font-size: 14px;
+      font-weight: 500;
+      margin: 2px 4px;
+      padding: 6px 10px;
+    }
 
+    .active {
+      padding: 6px 10px;
+      margin: 2px 4px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+
+@media(min-width: 480px) and (max-width: 768px) {
+  .main {
+    margin: 20px 0 8px;
+    flex-direction: column;
+    row-gap: 10px;
+
+    .span {
+      font-size: 14px;
+      font-weight: 500;
+      margin: 2px 4px;
+      padding: 6px 10px;
+    }
+
+    .active {
+      padding: 6px 10px;
+      margin: 2px 4px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+
+@media(max-width: 480px) {
+  .main {
+    margin: 25px 0 10px;
+    flex-direction: column;
+    row-gap: 10px;
+
+    .span {
+      font-size: 12px;
+      font-weight: 400;
+      margin: 2px 4px;
+      padding: 6px 10px;
+    }
+
+    .active {
+      padding: 6px 10px;
+      margin: 2px 4px;
+      font-size: 12px;
+      font-weight: 400;
+    }
   }
 }
