--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -1,15 +1,32 @@
 input {
-  width: 400px;
+  width: 300px;
   height: 30px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-  text-decoration: none;
   padding: 12px 15px;
   margin: 0 5px;
   outline: none;
   border: none;
+}
 
+@media(min-width: 768px) and (max-width: 1024px) {
+  input {
+    width: 200px;
+    height: 26px;
+    font-size: 14px;
+    font-weight: 300;
+  }
+}
 
-  // outline: none;
+@media(min-width: 480px) and (max-width: 768px) {
+  input {
+    width: 100%;
+  }
+}
+
+@media(max-width: 480px) {
+  input {
+    width: 100%;
+  }
 }
