--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -21,12 +21,12 @@ input {
 
 @media(min-width: 480px) and (max-width: 768px) {
   input {
-    width: 100%;
+    // width: 100%;
   }
 }
 
 @media(max-width: 480px) {
   input {
-    width: 100%;
+    // width: 100%;
   }
 }
