--- a/src/components/CountryInfo/CountryInfo.module.scss
+++ b/src/components/CountryInfo/CountryInfo.module.scss
@@ -8,7 +8,7 @@
 
     img {
         width: 440px;
-        box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+        box-shadow: 1px 1px 14px rgba(0, 0, 0, 0.2);
     }
 
     .data {
@@ -21,14 +21,26 @@
             cursor: pointer;
             font-size: 14px;
             font-weight: 300;
-            box-shadow: 1px 1px 1em rgba(0, 0, 0, 0.2);
+            box-shadow: 1px 1px 14px rgba(0, 0, 0, 0.2);
             text-decoration: none;
             padding: 2px 15px;
-            margin: 0 5px;
+            margin: 1px 5px;
         }
 
         .info {
             margin-top: 20px;
+
+            .penum {
+                display: flex;
+                align-items: center;
+
+                .enum {
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    row-gap: 6px;
+                }
+            }
 
             p {
                 margin: 10px 0px;
@@ -51,7 +63,6 @@
             grid-template-columns: repeat(4, 100px);
             gap: 8px 8px;
         }
-
     }
 }
 
@@ -62,7 +73,7 @@
         padding: 30px 30px;
 
         img {
-            width: 380px;
+            width: 350px;
         }
 
         .data {
@@ -88,7 +99,6 @@
             .border {
                 gap: 7px 5px;
             }
-
         }
     }
 }
@@ -99,7 +109,7 @@
         padding: 30px 30px;
 
         img {
-            width: 380px;
+            width: 300px;
         }
 
         .data {
@@ -119,6 +129,7 @@
             .borders {
                 p {
                     margin: 6px 0;
+                    font-size: 14px;
                 }
             }
 
@@ -126,12 +137,11 @@
                 grid-template-columns: repeat(3, 100px);
                 gap: 5px 3px;
             }
-
         }
     }
 }
 
-@media(max-width: 768px) {
+@media(min-width: 480px) and (max-width: 768px) {
     .main {
         display: flex;
         flex-direction: column;
@@ -142,7 +152,7 @@
         padding: 15px 20px;
 
         img {
-            width: 220px;
+            width: 320px;
         }
 
         .data {
@@ -174,23 +184,22 @@
             }
 
             .border {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, 100px);
                 grid-gap: 7px 5px;
             }
-
         }
     }
 }
 
-@media(max-width: 768px) {
+@media(min-width: 320px) and (max-width: 480px) {
     .main {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 30px;
-        margin-top: 10px;
-        padding: 15px 20px;
+        margin-top: 8px;
+        padding: 15px 30px;
 
         img {
             width: 220px;
@@ -209,7 +218,7 @@
             }
 
             .info {
-                margin-top: 12px;
+                margin-top: 8px;
 
                 p {
                     margin: 6px 0px;
@@ -225,10 +234,9 @@
             }
 
             .border {
-                grid-template-columns: repeat(3, 1fr);
                 grid-gap: 7px 5px;
+                grid-template-columns: repeat(2, 100px);
             }
-
         }
     }
 }
