--- a/src/components/CountryItem/CountryItem.module.scss
+++ b/src/components/CountryItem/CountryItem.module.scss
@@ -1,5 +1,5 @@
 .main {
-    box-shadow: 2px 2px 1em rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 14px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
     a {
