--- a/src/components/MapSwitcher/MapSwitcher.module.scss
+++ b/src/components/MapSwitcher/MapSwitcher.module.scss
@@ -1,36 +1,53 @@
-.main {
+.container {
   margin: 10px 0 5px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
 
   .switch {
     display: flex;
-  }
+    justify-content: space-between;
+    align-items: center;
 
-  .span {
-    font-size: 18px;
-    font-weight: 500;
-    margin: 2px 10px;
-    padding: 6px 15px;
+    .icon {
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
 
-    &:hover {
-      cursor: pointer;
+    .span {
+      font-size: 18px;
+      font-weight: 500;
+      margin: 2px 10px;
+      padding: 6px 15px;
+
+      &:hover {
+        cursor: pointer;
+        border-bottom: 2px solid #457a9d;
+      }
+    }
+
+    .active {
+      padding: 6px 15px;
+      margin: 2px 10px;
+      font-size: 18px;
+      font-weight: 500;
       border-bottom: 2px solid #457a9d;
+
+      &:hover {
+        cursor: pointer;
+        border-bottom: 2px solid #457a9d;
+      }
     }
   }
 
-  .active {
-    padding: 6px 15px;
-    margin: 2px 10px;
-    font-size: 18px;
-    font-weight: 500;
-    border-bottom: 2px solid #457a9d;
-
-    &:hover {
-      cursor: pointer;
-      border-bottom: 2px solid #457a9d;
-    }
+  .searchPanel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 15px 25px;
   }
 }
 
