--- a/src/components/CountryInfo/CountryInfo.module.scss
+++ b/src/components/CountryInfo/CountryInfo.module.scss
@@ -21,7 +21,8 @@
             cursor: pointer;
             font-size: 14px;
             font-weight: 300;
-            box-shadow: 1px 1px 14px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
             text-decoration: none;
             padding: 2px 15px;
             margin: 1px 5px;
@@ -43,7 +44,7 @@
             }
 
             p {
-                margin: 10px 0px;
+                margin: 8px 0px;
 
                 span {
                     font-weight: bold;
@@ -53,6 +54,7 @@
 
         .borders {
             p {
+                font-size: 16px;
                 font-weight: bold;
                 margin: 10px 0;
             }
@@ -92,6 +94,7 @@
 
             .borders {
                 p {
+                    font-size: 14px;
                     margin: 6px 0;
                 }
             }
@@ -121,7 +124,7 @@
                 margin-top: 15px;
 
                 p {
-                    margin: 8px 0px;
+                    margin: 7px 0px;
                     font-size: 14px;
                 }
             }
