--- a/src/components/MapSwitcher/MapSwitcher.module.scss
+++ b/src/components/MapSwitcher/MapSwitcher.module.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 10px 0 5px;
+  margin: 10px 0 2px;
   display: flex;
   flex-direction: column;
 
@@ -10,7 +10,7 @@
 
     .icon {
       &:hover {
-        transform: scale(1.1);
+        transform: scale(0.9);
       }
     }
 
@@ -46,91 +46,122 @@
     align-items: center;
     margin-top: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+
     border-radius: 8px;
-    padding: 15px 25px;
+    padding: 10px 25px;
   }
 }
 
 @media(min-width: 1024px) and (max-width: 1100px) {
-  .main {
+  .container {
     margin: 20px 0 8px;
 
-    .span {
-      font-size: 17px;
-      font-weight: 500;
-      margin: 2px 6px;
-      padding: 6px 12px;
-    }
+    .switch {
 
-    .active {
-      margin: 2px 6px;
-      font-size: 17px;
-      font-weight: 500;
-      padding: 6px 12px;
+      .span {
+        font-size: 16px;
+        margin: 2px 6px;
+        padding: 6px 12px;
+      }
+
+      .active {
+        margin: 2px 6px;
+        font-size: 16px;
+        padding: 6px 12px;
+      }
     }
   }
 }
 
 @media(min-width: 768px) and (max-width: 1024px) {
-  .main {
+  .container {
     margin: 20px 0 8px;
 
-    .span {
-      font-size: 14px;
-      font-weight: 500;
-      margin: 2px 4px;
-      padding: 6px 10px;
-    }
+    .switch {
 
-    .active {
-      padding: 6px 10px;
-      margin: 2px 4px;
-      font-size: 14px;
-      font-weight: 500;
+      .span {
+        font-size: 14px;
+        margin: 2px 4px;
+        padding: 6px 10px;
+      }
+
+      .active {
+        padding: 6px 10px;
+        margin: 2px 4px;
+        font-size: 14px;
+      }
     }
   }
 }
 
 @media(min-width: 480px) and (max-width: 768px) {
-  .main {
+  .container {
     margin: 20px 0 8px;
     flex-direction: column;
     row-gap: 10px;
 
-    .span {
-      font-size: 14px;
-      font-weight: 500;
-      margin: 2px 4px;
-      padding: 6px 10px;
+    .switch {
+
+      .span {
+        font-size: 14px;
+        margin: 2px 4px;
+        padding: 6px 10px;
+      }
+
+      .active {
+        padding: 6px 10px;
+        margin: 2px 4px;
+        font-size: 14px;
+      }
     }
 
-    .active {
-      padding: 6px 10px;
-      margin: 2px 4px;
-      font-size: 14px;
-      font-weight: 500;
+    .searchPanel {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-top: 8px;
+      gap: 10px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      padding: 15px 20px 10px;
     }
+
   }
 }
 
 @media(max-width: 480px) {
-  .main {
+  .container {
     margin: 25px 0 10px;
     flex-direction: column;
     row-gap: 10px;
 
-    .span {
-      font-size: 12px;
-      font-weight: 400;
-      margin: 2px 4px;
-      padding: 6px 10px;
+    .switch {
+      .span {
+        font-size: 12px;
+        font-weight: 400;
+        margin: 2px 4px;
+        padding: 6px 10px;
+      }
+
+      .active {
+        padding: 6px 10px;
+        margin: 2px 4px;
+        font-size: 12px;
+        font-weight: 400;
+      }
     }
 
-    .active {
-      padding: 6px 10px;
-      margin: 2px 4px;
-      font-size: 12px;
-      font-weight: 400;
+    .searchPanel {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-top: 8px;
+      gap: 10px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      padding: 12px 20px 2px;
     }
+
   }
 }
