--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,28 +1,11 @@
 .main {
     width: 150%;
-
+    margin-right: 10px;
 }
 
-// @media(min-width: 1264px) and (max-width: 1400px) {
-//     .main {
-//         width: 150%;
-//     }
-// }
-
-// @media(min-width: 768px) and (max-width: 1264px) {
-//     .main {
-//         width: 60%;
-//     }
-// }
-
-@media(min-width: 480px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .main {
         width: 85%;
-    }
-}
-
-@media(max-width: 480px) {
-    .main {
-        width: 85%;
+        margin-right: 0;
     }
 }
