--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,10 @@
     align-items: center;
     margin: 0 40px;
 
+    .descr {
+        font-size: 14px;
+    }
+
     .arrow {
         margin: 0 5px;
 
@@ -16,37 +20,37 @@
     h1 {
         font-size: 20px;
         text-transform: uppercase;
-        margin-right: auto;
-        padding-left: 5px;
+        padding: 0 10px;
 
         &:hover {
             cursor: pointer;
             color: #457a9d;
         }
     }
+}
 
-    @media(max-width: 1024px) {
-        & {
-            padding: 0px 20px;
+@media(min-width: 768px) and (max-width: 1024px) {
+    .main {
+        height: 45px;
 
-            .main {
-                width: auto
-            }
+        .descr {
+            font-size: 12px;
+        }
+
+        h1 {
+            font-size: 18px;
         }
     }
+}
 
-    @media(max-width: 767px) {
+@media(max-width: 480px) {
+    .main {
+        .descr {
+            font-size: 11px;
+        }
 
-        .main {
-            height: 100%;
-
-            h1 {
-                font-size: 17px;
-            }
-
-            p {
-                font-size: 14px
-            }
+        h1 {
+            font-size: 17px;
         }
     }
 }
